<?xml version="1.0"?>
<package format="2">
  <name>mobipick_bringup</name>
  <version>0.0.0</version>
  <description>Launch and configuration files for the real Mobipick robot.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>TODO</license>

  <url>https://git.hb.dfki.de/mobipick/mobipick</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>astra_launch</exec_depend>
  <exec_depend>mir100_driver</exec_depend>
  <exec_depend>pico_flexx_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
