<?xml version="1.0"?>
<package format="2">
  <name>mobipick_bringup</name>
  <version>0.0.0</version>
  <description>Launch and configuration files for the real Mobipick robot.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>TODO</license>

  <url>https://git.ni.dfki.de/mobipick/mobipick</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>astra_depth_filters</exec_depend>
  <exec_depend>astra_launch</exec_depend>
  <exec_depend>cv_bridge</exec_depend>  <!-- for normalize_image node -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>mir_driver</exec_depend>
  <exec_depend>mobipick_description</exec_depend>
  <exec_depend>mobipick_moveit_config</exec_depend>
  <exec_depend>mobipick_pick_n_place</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <!-- <exec_depend>pico_flexx_driver</exec_depend>   commented out, because it's too hard to install in CI -->
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robotiq_2f_gripper_action_server</exec_depend>
  <exec_depend>robotiq_2f_gripper_control</exec_depend>
  <exec_depend>robotiq_ft_sensor</exec_depend>
  <exec_depend>rospy</exec_depend>  <!-- for normalize_image node -->
  <exec_depend>sensor_msgs</exec_depend>  <!-- for normalize_image node -->
  <exec_depend>tf</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
