<?xml version="1.0"?>
<package format="2">
  <name>mobipick_navigation</name>
  <version>0.0.0</version>
  <description>Launch and configuration files for move_base, localization etc. on the Mobipick robot.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url>https://git.hb.dfki.de/mobipick/mobipick</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>move_base</exec_depend>
  <exec_depend>sbpl_lattice_planner</exec_depend>
</package>
