<?xml version="1.0"?>
<package format="2">
  <name>mobipick_pick_n_place</name>
  <version>0.0.0</version>
  <description>Some demo nodes that show off the MoveIt capabilities of the Mobipick robot.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url>https://git.ni.dfki.de/mobipick/mobipick</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>genmsg</build_depend>

  <depend>actionlib_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>shape_msgs</depend>
  <depend>tf</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>


  <exec_depend>message_generation</exec_depend>
  <exec_depend>mobipick_moveit_config</exec_depend>
  <exec_depend>mir_navigation</exec_depend>

</package>
